# PlutusBank

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  build-android.ps1  plutusbank.keystore  setup-env.ps1  setup-qt-env.ps1  vcpkg.json
android/: AndroidManifest.xml
android/res/values/: strings.xml  styles.xml
database/: init.sql
qml/: Auth.qml  CreateCardDialog.qml  Main.qml  MainPage.qml  Register.qml
src/: AuthController.cpp  AuthController.h  CardController.cpp  CardController.h  DataBaseManager.cpp  DataBaseManager.h  UserSession.cpp  UserSession.h  main.cpp
